--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   meta: ^1.7.0
   flutter_guid: ^0.2.0
   rxdart: ^0.27.5
+  firebase_auth: ^3.10.0
+  google_sign_in: ^4.4.4
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
