--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,8 @@ dependencies:
   flutter_guid: ^0.2.0
   rxdart: ^0.27.5
   firebase_auth: ^3.10.0
-  google_sign_in: ^4.4.4
+  googleapis: ^5.0.1
+  google_sign_in: ^5.1.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
